--- a/app/src/main/res/layout/activity_tab1_fragment.xml
+++ b/app/src/main/res/layout/activity_tab1_fragment.xml
@@ -42,45 +42,18 @@
                 android:orientation="horizontal"
                 android:layout_marginTop="8dp"
                 android:layout_height="wrap_content">
-                <ImageView
-                    android:layout_width="16dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_height="16dp"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/location"
-                    />
+
                 <TextView
-                    android:id="@+id/pickTv"
+                    android:id="@+id/shop_name"
                     android:layout_width="100dp"
                     android:layout_height="wrap_content"
                     android:paddingLeft="10dp"
-                    android:text="ffff"
+                    android:text="Shop Name"
                     android:layout_gravity="center_vertical"
                     android:gravity="center_vertical"
                     android:textSize="16sp" />
-                <ImageView
-                    android:layout_width="22dp"
-                    android:layout_height="22dp"
-                    android:layout_marginLeft="8dp"
-                    android:layout_marginRight="8dp"
-                    android:src="@drawable/delivery"
-                    />
-                <ImageView
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:layout_marginLeft="20dp"
-                    android:layout_gravity="center_vertical"
-                    android:src="@drawable/location"
-                    />
-                <TextView
-                    android:id="@+id/createdDate"
-                    android:layout_width="100dp"
-                    android:layout_height="wrap_content"
-                    android:paddingLeft="10dp"
-                    android:text="ffff"
-                    android:gravity="center_vertical"
-                    android:layout_gravity="center_vertical"
-                    android:textSize="16sp" />
+
+
             </LinearLayout>
 
             <LinearLayout
@@ -98,15 +71,15 @@
                     android:layout_marginTop="4dp"
                     android:layout_marginBottom="4dp"
                     android:paddingLeft="10dp"
-                    android:text="test 1"
+                    android:text="Delivery Address"
                     android:textSize="14sp" />
                 <TextView
-                    android:id="@+id/shop_name"
+                    android:id="@+id/pickTv"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
                     android:paddingLeft="10dp"
-                    android:text="test 2"
+                    android:text="PickUp Address"
                     android:textSize="14sp" />
 
 
@@ -117,10 +90,10 @@
                     android:orientation="horizontal">
 
                     <TextView
-                        android:layout_width="match_parent"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:paddingLeft="10dp"
-                        android:text="test 4"
+                        android:text="Product Name"
                         android:id="@+id/dateee"
                         android:layout_weight="1"
                         android:textSize="14sp"
@@ -142,6 +115,7 @@
                         android:gravity="right"
                         android:paddingBottom="5dp"
                         android:paddingRight="15dp"
+                        android:textColor="#00ff00"
                         android:text=""
                         android:textSize="12sp" />
                 </LinearLayout>
