--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -103,11 +103,26 @@
 
         <TextView
             android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:gravity="end"
+            android:layout_below="@+id/ed"
+            android:id="@+id/forgot"
+            android:layout_marginTop="10dp"
+            android:text="Forgot Your Password ????"
+            android:textColor="#fff"
+            android:textStyle="bold"
+            android:layout_marginEnd="30dp"
+            android:layout_marginBottom="30dp"
+            android:layout_marginRight="30dp" />
+
+
+        <TextView
+            android:layout_width="match_parent"
             android:layout_height="50dp"
             android:background="@drawable/selc"
-            android:layout_below="@+id/ed"
+            android:layout_below="@+id/forgot"
             android:id="@+id/login"
-            android:layout_marginTop="30dp"
+            android:layout_marginTop="10dp"
             android:text="Login"
             android:textColor="#5C25B7"
             android:textAlignment="center"
