--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -9,7 +9,7 @@
         <item
             android:id="@+id/nav_photos"
             android:icon="@drawable/home"
-            android:title="Photos" />
+            android:title="Change Password" />
 
         <item
             android:id="@+id/logout"
